# eden-alt

./: .gitignore  .gitmodules  .vcpkg.json  0001-cmake-fix-Qt-download-on-WoA.patch  AppImage-build-debian.sh  AppImage-build-local.sh  CMakeLists.txt  CONTRIBUTING.md  README.md  Test_patch_for_potential_321_fix.patch  aarch64-linux-gnu.cmake  cpmfile.json  ffmpeg.patch  shell.nix  vcpkg.json
src/: CMakeLists.txt  dep_hashes.h.in
src/android/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
src/audio_core/: CMakeLists.txt  audio_core.cpp  audio_core.h  audio_event.cpp  audio_in_manager.cpp  audio_in_manager.h  audio_manager.cpp  audio_manager.h  audio_out_manager.cpp  audio_out_manager.h  audio_render_manager.cpp  audio_render_manager.h
src/common/: CMakeLists.txt  address_space.h  address_space.inc  alignment.h  announce_multiplayer_room.h  assert.cpp  assert.h  atomic_ops.h  bit_field.h  bit_util.h  bounded_threadsafe_queue.h  cityhash.cpp  common_funcs.h  common_precompiled_headers.h  common_types.h  concepts.h  container_hash.h  cpu_features.cpp  cpu_features.h  demangle.cpp  demangle.h  device_power_state.cpp  device_power_state.h  dynamic_library.cpp  error.cpp  expected.h  fiber.cpp  fiber.h  fixed_point.h  free_region_manager.h  gamemode.cpp  gamemode.h  heap_tracker.cpp  heap_tracker.h  hex_util.cpp  hex_util.h  host_memory.cpp  host_memory.h  httplib.h  input.h  (+63 more)
src/core/: CMakeLists.txt  constants.cpp  constants.h  core.cpp  core.h  core_timing.cpp  core_timing.h  cpu_manager.cpp  cpu_manager.h  device_memory.h  device_memory_manager.h  device_memory_manager.inc  game_overrides.cpp  game_overrides.h  game_settings.cpp  game_settings.h  hardware_properties.h  launch_timestamp_cache.cpp  launch_timestamp_cache.h  memory.cpp  memory.h  perf_stats.cpp  perf_stats.h  reporter.cpp  reporter.h
src/dedicated_room/: CMakeLists.txt  yuzu_room.cpp  yuzu_room.h  yuzu_room.rc
src/dynarmic/: .clang-format  .gitignore  CMakeLists.txt  README.md
src/eden_libretro/: CMakeLists.txt  eden_libretro.info.in  emu_window_libretro.cpp  emu_window_libretro.h  libretro.h  libretro_core.cpp  libretro_vfs.h
src/frontend_common/: CMakeLists.txt  config.cpp  config.h  content_manager.h  data_manager.cpp  data_manager.h  firmware_manager.cpp  firmware_manager.h  mod_manager.cpp  mod_manager.h  play_time_manager.cpp  play_time_manager.h  settings_generator.cpp  settings_generator.h  update_checker.cpp  update_checker.h
src/hid_core/: CMakeLists.txt  hid_core.cpp  hid_core.h  resource_manager.cpp
src/input_common/: CMakeLists.txt  input_engine.cpp  input_engine.h  input_poller.cpp  main.cpp  main.h
src/ios/: AdvancedSettingsView.swift  AppIconProvider.swift  AppUI-Bridging-Header.h  AppUI.swift  AppUIGameInformation.h  AppUIGameInformation.mm  AppUIObjC.h  AppUIObjC.mm  BootOSView.swift  CMakeLists.txt  ContentView.swift  ControllerView.swift  CoreSettingsView.swift  DetectServer.swift  EmulationGame.swift  EmulationHandler.swift  EmulationScreenView.swift  EmulationSession.h  EmulationSession.mm  EmulationView.swift  EmulationWindow.h  EmulationWindow.mm  EnableJIT.swift  FileManager.swift  FolderMonitor.swift  GameButtonListView.swift  GameButtonView.swift  GameListView.swift  Haptics.swift  InfoView.swift  JoystickView.swift  KeyboardHostingController.swift  LibraryView.swift  MetalView.swift  NavView.swift  PomeloApp.swift  SettingsView.swift  SwiftUIJoystick.swift  VMA.cpp
src/libretro/: CMakeLists.txt  emu_window_libretro.cpp  emu_window_libretro.h  libretro_core.cpp  libretro_vfs.h
src/network/: CMakeLists.txt  announce_multiplayer_session.cpp  announce_multiplayer_session.h  network.cpp  network.h  packet.cpp  packet.h  room.cpp  room.h  room_member.cpp  room_member.h  verify_user.h
src/qt_common/: CMakeLists.txt  gamemode.cpp  gamemode.h  gui_settings.cpp  gui_settings.h  qt_applet_util.cpp  qt_applet_util.h  qt_common.cpp  qt_common.h  qt_compat.h  qt_compress.cpp  qt_config.cpp  qt_config.h  qt_content_util.cpp  qt_content_util.h  qt_frontend_util.cpp  qt_frontend_util.h  qt_game_util.cpp  qt_game_util.h  qt_meta.cpp  qt_meta.h  qt_path_util.cpp  qt_path_util.h  qt_rom_util.cpp  qt_rom_util.h  qt_string_lookup.h  shared_translation.cpp  shared_translation.h  uisettings.cpp  uisettings.h
src/shader_recompiler/: CMakeLists.txt  environment.h  exception.h  host_translate_info.h  profile.h  runtime_info.h  shader_info.h  shader_pool.h  stage.h
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  cdma_pusher.cpp  cdma_pusher.h  compatible_formats.cpp  delayed_destruction_ring.h  dirty_flags.cpp  dirty_flags.h  dma_pusher.cpp  dma_pusher.h  fence_manager.h  fsr.cpp  fsr.h  gpu.cpp  gpu.h  gpu_thread.cpp  gpu_thread.h  invalidation_accumulator.h  macro.cpp  macro.h  memory_manager.cpp  memory_manager.h  polygon_mode_utils.h  pte_kind.h  query_cache.h  rasterizer_interface.h  renderer_base.cpp  shader_cache.cpp  shader_cache.h  shader_environment.cpp  shader_environment.h  smaa_area_tex.h  smaa_search_tex.h  surface.cpp  surface.h  transform_feedback.cpp  video_core.cpp  video_core.h
src/web_service/: CMakeLists.txt  announce_room_json.cpp  announce_room_json.h  verify_user_jwt.cpp  verify_user_jwt.h  web_backend.cpp
src/yuzu/: CMakeLists.txt  Info.plist  about_dialog.cpp  aboutdialog.ui  bootmanager.cpp  bootmanager.h  breakpad.cpp  breakpad.h  compatdb.cpp  compatdb.ui  compatibility_list.cpp  compatibility_list.h  data_dialog.cpp  data_dialog.h  data_dialog.ui  data_widget.ui  deps_dialog.cpp  deps_dialog.h  deps_dialog.ui  discord_impl.cpp  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  game_list_worker.h  hotkeys.cpp  install_dialog.cpp  libqt_common.cpp  libqt_common.h  loading_screen.cpp  loading_screen.h  main.cpp  main.h  main.ui  main_window.cpp  main_window.h  migration_dialog.cpp  migration_dialog.h  migration_worker.cpp  migration_worker.h  (+25 more)
src/yuzu_cmd/: CMakeLists.txt  emutls.c  sdl_config.cpp  yuzu.cpp  yuzu.rc
src/yuzu_room_standalone/: CMakeLists.txt  main.cpp  yuzu_room_standalone.cpp
(+2692 files in other folders)
